2008-10-03  David Hyatt  <hyatt@apple.com>

        Fix Windows bustage.

        * platform/win/FileChooserWin.cpp:
        (WebCore::FileChooser::openFileChooser):
        * platform/win/PlatformScreenWin.cpp:
        (WebCore::monitorInfoForWidget):
        * platform/win/WidgetWin.cpp:
        * plugins/win/PluginViewWin.cpp:
        (WebCore::PluginView::getValue):
        (WebCore::PluginView::forceRedraw):
        (WebCore::PluginView::init):

2008-10-03  Darin Adler  <darin@apple.com>

        * bindings/js/JSInspectedObjectWrapper.cpp: Try to fix a build failure
        seen on some machines but not others by adding an include.

2008-10-03  Darin Adler  <darin@apple.com>

        - Qt build fix

        * bridge/qt/qt_runtime.cpp: Remove long-obsolete codeType and
        execute functions. Declarations for these relied on the CodeType
        enumeration, which used to be in ExecState.h; but the functions
        aren't needed at all.
        * bridge/qt/qt_runtime.h: Ditto.

2008-10-03  Darin Adler  <darin@apple.com>

        Reviewed by Geoff Garen.

        - next step of https://bugs.webkit.org/show_bug.cgi?id=21295
          Turn ExecState into a call frame pointer.

        Remove m_globalObject and m_globalData from ExecState.

        * bindings/js/JSDOMWindowBase.cpp:
        (WebCore::JSDOMWindowBase::JSDOMWindowBaseData::JSDOMWindowBaseData):
        Removed an argument now that JSGlobalObject doesn't need it any more.
        (WebCore::JSDOMWindowBase::JSDOMWindowBase): Removed the argument from
        the JSDOMWindowBaseData constructor, and added the this argument to the
        JSGlobalObject constructor. This is because a couple key bits of
        initialization moved from the data constructor to the JSGlobalObject
        constructor.
        * bindings/js/JSDOMWindowBase.h: Ditto.

        * bridge/qt/qt_runtime.cpp:
        (JSC::Bindings::QtRuntimeMethod::QtRuntimeMethod):
        * bridge/runtime_method.cpp: