@@ -1,5 +1,12 @@
 2008-10-03  David Hyatt  <hyatt@apple.com>
 
+        Fix Windows scrollbar bustage in popup menus.
+
+        * platform/win/PopupMenuWin.cpp:
+        (WebCore::PopupWndProc):
+
+2008-10-03  David Hyatt  <hyatt@apple.com>
+
         Fix Windows bustage.
 
         * platform/win/FileChooserWin.cpp:
